--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc: ^6.1.3
   dartz: ^0.9.2
   equatable: ^1.2.6
+  cloud_firestore: ^0.16.0+1
+  firebase_core: ^0.7.0
   
 
 dev_dependencies:
